--- a/index.html
+++ b/index.html
@@ -61,7 +61,31 @@
     .row-critical-down { background: #fee2e2 !important; }
     .zone-tools { display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin:8px 0; }
     .pill { display:inline-block; padding:2px 6px; border-radius:10px; font-size:11px; background:#eef2ff; color:#3730a3; font-weight:700; }
-    .checkbox-ot { transform: scale(1.1); }
+    .checkbox-ot { transform: scale(1.1); } /* === Fix superposición: modal por encima de headers sticky === */
+.modal { z-index: 9999 !important; }
+.modal-content { position: relative; z-index: 10000; }
+
+/* Evitar scroll del fondo cuando el modal está abierto */
+body.modal-open { overflow: hidden; }
+
+/* Mini-charts en la cabecera del modal */
+.zone-mini {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 8px;
+  margin: 8px 0 12px 0;
+}
+.mini-title { font-weight: 800; color:#111827; font-size: 12px; }
+.mini-chart, .hour-chart {
+  display:flex; align-items:flex-end; gap:4px; height:42px;
+}
+.mini-chart i, .hour-chart i {
+  display:block; width:12px; background:#c7d2fe; border-radius:2px;
+}
+.mini-chart i.hot { background:#6366f1; }
+.hour-chart i.hot { background:#8b5cf6; }
+.mini-legend { color:#6b7280; font-size:11px; display:flex; justify-content:space-between; }
+
   </style>
 </head>
 <body>
@@ -1001,95 +1025,159 @@
           <table>${head}<tbody>${rows}</tbody></table>
         </div>`;
     }
+    /* === Series por día/hora para minigráficos del modal === */
+function zoneBuildTimeSeries(zoneRows) {
+  const today = new Date(); today.setHours(0,0,0,0);
+  const days = [];
+  for (let i=6;i>=0;i--) days.push(new Date(today.getTime() - i*DAY_MS)); // [N-6 .. N]
+  const dayKeys = days.map(d => toDayKey(d));
+  const perDay = new Map(dayKeys.map(k => [k, new Set()])); // OTs únicas/día
+  const perHour = new Array(24).fill(0);
+
+  zoneRows.forEach(r => {
+    const dt = parseDate(r.fechaCreacion); if (!dt) return;
+    const dkey = toDayKey(dt);
+    const ot = r.numeroCita || (r.calle+'|'+r.fechaCreacion);
+    if (perDay.has(dkey)) perDay.get(dkey).add(ot);
+    perHour[dt.getHours()]++;
+  });
+
+  const dayCounts = dayKeys.map(k => (perDay.get(k) ? perDay.get(k).size : 0));
+  return { days, dayCounts, perHour };
+}
+
+function zoneMiniChartsHTML(zoneRows) {
+  const { days, dayCounts, perHour } = zoneBuildTimeSeries(zoneRows);
+
+  // barras por día (últimos 7)
+  const maxD = Math.max(1, ...dayCounts);
+  const dayBars = dayCounts.map((c,i) => {
+    const h = Math.max(3, Math.round(38*c/maxD));
+    const label = `${days[i].toLocaleDateString()}: ${c} OTs`;
+    const hot = (i===6 || i===5) && c>=3 ? ' hot' : '';
+    return `<i class="${hot}" style="height:${h}px" title="${label}"></i>`;
+  }).join('');
+
+  // barras por hora (0..23)
+  const maxH = Math.max(1, ...perHour);
+  const hourBars = perHour.map((c,h) => {
+    const hh = Math.max(2, Math.round(38*c/maxH));
+    const label = `${h.toString().padStart(2,'0')}:00 — ${c} OTs`;
+    const hot = c>0 && (h>=9 && h<=21) ? ' hot' : '';
+    return `<i class="${hot}" style="height:${hh}px" title="${label}"></i>`;
+  }).join('');
+
+  const dayLegend = `<div class="mini-legend"><span>N-6</span><span>N-5</span><span>N-4</span><span>N-3</span><span>N-2</span><span>Ayer</span><span>Hoy</span></div>`;
+  const hourLegend = `<div class="mini-legend"><span>00h</span><span>06h</span><span>12h</span><span>18h</span><span>23h</span></div>`;
+
+  return `
+    <div class="zone-mini">
+      <div>
+        <div class="mini-title">OTs por día (últimos 7)</div>
+        <div class="mini-chart">${dayBars}</div>
+        ${dayLegend}
+      </div>
+      <div>
+        <div class="mini-title">OTs por hora (acumulado ventana)</div>
+        <div class="hour-chart">${hourBars}</div>
+        ${hourLegend}
+      </div>
+    </div>`;
+}
+
 
     // ===== Modal de Zona =====
-    function openZoneModal(zona) {
-      const modal = document.getElementById('zoneModal');
-      const modalTitle = document.getElementById('modalTitle');
-      const modalBody = document.getElementById('modalBody');
-      modalTitle.textContent = '📍 Zona: ' + zona;
+   // ===== Modal de Zona (con minigráficos y toolbar) =====
+function openZoneModal(zona) {
+  const modal = document.getElementById('zoneModal');
+  const modalTitle = document.getElementById('modalTitle');
+  const modalBody = document.getElementById('modalBody');
+  modalTitle.textContent = '📍 Zona: ' + zona;
 
-      const zoneData = (zoneDetailsMap && zoneDetailsMap[zona]) ? zoneDetailsMap[zona] : [];
-      if (!zoneData.length) {
-        modalBody.innerHTML = '<p>No hay datos disponibles para esta zona</p>';
-        modal.style.display = 'block'; modal.setAttribute('aria-hidden','false'); return;
-      }
+  const zoneData = (zoneDetailsMap && zoneDetailsMap[zona]) ? zoneDetailsMap[zona] : [];
+  if (!zoneData.length) {
+    modalBody.innerHTML = '<p>No hay datos disponibles para esta zona</p>';
+    modal.style.display = 'block'; modal.setAttribute('aria-hidden','false');
+    document.body.classList.add('modal-open');
+    return;
+  }
 
-      // Agrupar por fecha (día) y por OT (SA-xxxx)
-      const dayMap = new Map(); // dayKey -> array de filas
-      zoneData.forEach(r => {
-        const dt = parseDate(r.fechaCreacion);
-        const key = dt ? toDayKey(dt) : r.fechaCreacion;
-        if (!dayMap.has(key)) dayMap.set(key, []);
-        dayMap.get(key).push(r);
-      });
+  // Toolbar + minigráficos
+  let html = `
+    <div class="zone-tools">
+      <button class="btn btn-success" onclick="downloadZoneExcel('${zona.replace(/'/g,"&#39;")}')">📥 Excel Zona</button>
+      <button class="btn" style="background:#111827;color:#fff;" onclick="exportSelectedEcoTXT('${zona.replace(/'/g,"&#39;")}')">📝 Exportar ECO (TXT)</button>
+      <label style="display:flex;align-items:center;gap:6px;margin-left:auto;">
+        <input type="checkbox" id="chkAllZone" onchange="toggleAllZoneChecks(this)">
+        <span>Seleccionar todo</span>
+      </label>
+    </div>
+    ${zoneMiniChartsHTML(zoneData)}
+  `;
 
-      // Ordenar días desc
-      const days = Array.from(dayMap.keys()).sort((a,b)=> b-a);
+  // Agrupar por fecha y por OT
+  const dayMap = new Map();
+  zoneData.forEach(r => {
+    const dt = parseDate(r.fechaCreacion);
+    const key = dt ? toDayKey(dt) : r.fechaCreacion;
+    if (!dayMap.has(key)) dayMap.set(key, []);
+    dayMap.get(key).push(r);
+  });
+  const days = Array.from(dayMap.keys()).sort((a,b)=> b-a);
 
-      let html = `
-        <div class="zone-tools">
-          <button class="btn btn-success" onclick="downloadZoneExcel('${zona.replace(/'/g,"&#39;")}')">📥 Excel Zona</button>
-          <button class="btn" style="background:#111827;color:#fff;" onclick="exportSelectedEcoTXT('${zona.replace(/'/g,"&#39;")}')">📝 Exportar ECO (TXT)</button>
-          <label style="display:flex;align-items:center;gap:6px;margin-left:auto;">
-            <input type="checkbox" id="chkAllZone" onchange="toggleAllZoneChecks(this)">
-            <span>Seleccionar todo</span>
-          </label>
+  days.forEach(dayKey => {
+    const list = dayMap.get(dayKey);
+    const byOT = new Map();
+    list.forEach(r => {
+      const ot = r.numeroCita || 'Sin OT';
+      if (!byOT.has(ot)) byOT.set(ot, []);
+      byOT.get(ot).push(r);
+    });
+    const fechaHuman = (typeof dayKey === 'number') ? new Date(dayKey).toLocaleDateString() : String(dayKey);
+    html += `<div style="margin:10px 0 6px 0;"><span class="pill">Fecha: ${fechaHuman}</span></div>`;
+
+    byOT.forEach((registros, ot) => {
+      const first = registros[0];
+      const mac = macFromRow(first) || '-';
+      const eco = first.externalCaseId || '';
+      const tipo = first.tipoTrabajo || '-';
+      const estadoLegado = first.estado1 || '-';
+      const direccion = first.calle || '-';
+      const caso = first.numeroCaso || '-';
+
+      html += `
+        <div class="ot-card" style="background:#fff;border:1px solid #e5e7eb;border-radius:10px;padding:12px;margin-bottom:8px;">
+          <div class="ot-header" style="display:flex;align-items:center;gap:8px;justify-content:space-between;border-bottom:1px solid #f3f4f6;padding-bottom:8px;margin-bottom:8px;">
+            <div>
+              <input class="checkbox-ot" type="checkbox" data-eco="${eco}" />
+              <span class="pill">OT: ${ot}</span>
+            </div>
+            <div style="color:#6b7280;">ECO: <strong>${eco || '-'}</strong></div>
+          </div>
+          <div class="ot-details" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:8px;">
+            <div><div class="detail-label">Caso</div><div class="detail-value">${caso}</div></div>
+            <div><div class="detail-label">Dirección</div><div class="detail-value">${direccion}</div></div>
+            <div><div class="detail-label">Trabajo</div><div class="detail-value">${tipo}</div></div>
+            <div><div class="detail-label">MAC</div><div class="detail-value">${mac}</div></div>
+            <div><div class="detail-label">eco</div><div class="detail-value">${eco || '-'}</div></div>
+            <div><div class="detail-label">Estado cita legado</div><div class="detail-value">${estadoLegado}</div></div>
+          </div>
         </div>`;
+    });
+  });
 
-      days.forEach(dayKey => {
-        const list = dayMap.get(dayKey);
-        // agrupar por OT
-        const byOT = new Map();
-        list.forEach(r => {
-          const ot = r.numeroCita || 'Sin OT';
-          if (!byOT.has(ot)) byOT.set(ot, []);
-          byOT.get(ot).push(r);
-        });
-        const fechaHuman = (()=>{
-          if (typeof dayKey === 'number') {
-            const d = new Date(dayKey);
-            return d.toLocaleDateString();
-          }
-          return String(dayKey);
-        })();
+  modalBody.innerHTML = html;
+  modal.style.display = 'block';
+  modal.setAttribute('aria-hidden','false');
+  document.body.classList.add('modal-open'); // bloquea scroll del fondo
+}
 
-        html += `<div style="margin:10px 0 6px 0;"><span class="pill">Fecha: ${fechaHuman}</span></div>`;
-
-        byOT.forEach((registros, ot) => {
-          const first = registros[0];
-          const mac = macFromRow(first) || '-';
-          const eco = first.externalCaseId || '';
-          const tipo = first.tipoTrabajo || '-';
-          const estadoLegado = first.estado1 || '-';
-          const direccion = first.calle || '-';
-          const caso = first.numeroCaso || '-';
-
-          html += `
-            <div class="ot-card" style="background:#fff;border:1px solid #e5e7eb;border-radius:10px;padding:12px;margin-bottom:8px;">
-              <div class="ot-header" style="display:flex;align-items:center;gap:8px;justify-content:space-between;border-bottom:1px solid #f3f4f6;padding-bottom:8px;margin-bottom:8px;">
-                <div>
-                  <input class="checkbox-ot" type="checkbox" data-eco="${eco}" />
-                  <span class="pill">OT: ${ot}</span>
-                </div>
-                <div style="color:#6b7280;">ECO: <strong>${eco || '-'}</strong></div>
-              </div>
-              <div class="ot-details" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:8px;">
-                <div><div class="detail-label">Caso</div><div class="detail-value">${caso}</div></div>
-                <div><div class="detail-label">Dirección</div><div class="detail-value">${direccion}</div></div>
-                <div><div class="detail-label">Trabajo</div><div class="detail-value">${tipo}</div></div>
-                <div><div class="detail-label">MAC</div><div class="detail-value">${mac}</div></div>
-                <div><div class="detail-label">eco</div><div class="detail-value">${eco || '-'}</div></div>
-                <div><div class="detail-label">Estado cita legado</div><div class="detail-value">${estadoLegado}</div></div>
-              </div>
-            </div>`;
-        });
-      });
-
-      modalBody.innerHTML = html;
-      modal.style.display = 'block'; modal.setAttribute('aria-hidden','false');
-    }
-    function closeModal(){ const modal=document.getElementById('zoneModal'); modal.style.display='none'; modal.setAttribute('aria-hidden','true'); }
+function closeModal(){
+  const modal=document.getElementById('zoneModal');
+  modal.style.display='none';
+  modal.setAttribute('aria-hidden','true');
+  document.body.classList.remove('modal-open'); // restaura scroll del fondo
+}
 
     // Seleccionar/deseleccionar todos los checkboxes en el modal
     function toggleAllZoneChecks(chk){
