--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@ body.modal-open { overflow: hidden; }
     /* ========= UTILS ========= */
     function parseDate(str) {
       if (!str) return null;
-      const [datePart, timePart] = String(str).trim().split(' ');
+      const clean = String(str).trim().replace(',', ' ');
+const [datePart, timePart] = clean.split(/\s+/);
       const [d, m, y] = (datePart || '').split('/').map(Number);
       if (!d || !m || !y) return null;
       const [hh, mm] = (timePart || '00:00').split(':').map(v => parseInt(v || '0', 10));
@@ -410,8 +411,21 @@ if (headerRow === -1) headerRow = 0;
   };
 
   // Posibles nombres de columnas
-  const cFecha   = findCol(['fecha creación', 'fecha creacion', 'fecha y hora', 'fecha hora', 'fecha', 'fecha alta']);
-  const cHora    = findCol(['hora', 'hora creación', 'hora creacion']); // opcional si viene separada
+  // --- FECHA / HORA (más tolerante) ---
+const cFechaHora = findCol([
+  'fecha/hora', 'fecha/hora de apertura', 'fecha y hora', 'fecha hora',
+  'fecha_hora', 'fechahora', 'fecha completa', 'datetime'
+]);
+
+const cFechaSolo = findCol([
+  'fecha/hora', 'fecha/hora de apertura', 'fecha creación', 'fecha creacion',
+  'fecha', 'fecha alta'
+]);
+
+const cHora = findCol([
+  'hora', 'hora creación', 'hora creacion'
+]); // opcional si viene separada
+
   const cZonaHFC = findCol(['zona tecnica hfc', 'zona hfc', 'zona hfc/cmts', 'zona hfc/nodo', 'zona']);
   const cCalle   = findCol(['calle', 'direccion', 'dirección']);
   const cTel     = findCol(['telefono', 'teléfono']);
@@ -449,10 +463,10 @@ if (headerRow === -1) headerRow = 0;
           ))
         : null;
       // string: intento split
-      const s = String(v).trim();
+      const s = String(v).trim().replace(',', ' ');
       if (!s) return null;
       // si ya trae hora, lo devuelvo como está
-      if (/\d{1,2}\/\d{1,2}\/\d{2,4}\s+\d{1,2}:\d{2}/.test(s)) return s;
+     if (/\d{1,2}\/\d{1,2}\/\d{2,4}[\s,]+\d{1,2}:\d{2}/.test(s)) return s;
       // si es solo fecha (dd/mm/yyyy)
       const m = s.match(/^(\d{1,2})\/(\d{1,2})\/(\d{2,4})$/);
       if (m) return new Date(Number(m[3].length===2?'20'+m[3]:m[3]), Number(m[2])-1, Number(m[1]));
@@ -490,11 +504,13 @@ if (headerRow === -1) headerRow = 0;
   for (let i = headerRow + 1; i < jsonData.length; i++) {
     const r = jsonData[i] || [];
 
-    // Fecha + (opcional) Hora
-    const fechaStr = toStrDateTime(
-      cFecha !== -1 ? r[cFecha] : (r[0] || ''),
-      cHora  !== -1 ? r[cHora]  : ''
-    );
+  // Fecha + (opcional) Hora  (prioriza columna combinada “Fecha/Hora de apertura”)
+const fechaStr = toStrDateTime(
+  (cFechaHora !== -1 ? r[cFechaHora]
+    : (cFechaSolo !== -1 ? r[cFechaSolo] : (r[0] || ''))),
+  (cHora !== -1 ? r[cHora] : '')
+);
+
     if (!fechaStr) continue;
 
     const rowData = {
